                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-12-2005 changed: Effect times are now calculated after items have been rendered once.
 - 28-12-2005 added: ListItem.Thumb and ListItem.Label to the InfoManager.
 - 28-12-2005 changed: Added a media window base class.
 - 28-12-2005 fixed: Sort order for items that are identical other than their length.
 - 28-12-2005 changed: moved sorting and available view as controls out of the video, programs, pictures + scripts windows
 - 28-12-2005 changed: moved parent folder testing into the fileitem, results in a minor speed increase while sorting
 - 28-12-2005 fixed: music nav, "* All Genre" folder may not always be on top if the list
 - 28-12-2005 fixed: Movie Lookup on DVD folders like "Movie Name/VIDEO_TS/VIDEO_TS.IFO"
 - 27-12-2005 added: new Http Api command "getmedialocation", used as follows:
			getmedialocation&parameter=type;location;showdate
			type=(music,video,pictures), location=share name or path, showdate=(0,1)
 - 27-12-2005 added: advanced configuration option for path substitution; look in xboxmediacetner.xml for details.
 - 27-12-2005 fixed: Bypass CD Selection in "x" seconds
 - 27-12-2005 changed: HTTP API getshares command now accepts a type parameter: getshares&parameter=type;pathsonly
			type=(music, video, pictures), pathsonly=(0,1)
 - 27-12-2005 fixed: music nav, "* All Artists" folder may not always be on top if the list
 - 27-12-2005 fixed: music nav, "* All Songs" folders where missing
 - 26-12-2005 added: custom slideshows in My Pictures via m3u playlists (only images are queued into the slideshow)
 - 26-12-2005 fixed: music nav, the "* All *" items could not be queued to the playlist